src/objects/Apttus_Approval__ApprovalRuleEntry__c/fields/Apttus_Approval__ConditionFieldNames__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ConditionFieldNames__c</fullName>
    <description>The list of field names used in criteria and conditions</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The list of field names used in criteria and conditions</inlineHelpText>
    <label>Condition Field Names</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>