src/objects/Apttus_Approval__ApprovalRuleEntry__c/fields/Apttus_Approval__EntryLabel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EntryLabel__c</fullName>
    <description>The entry label</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the name of a custom label containing text that will be used as the label for the entry</inlineHelpText>
    <label>Entry Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>